fixed scrollbar issues

--- a/style.css
+++ b/style.css
@@ -13,7 +13,9 @@
 *::after {
   box-sizing: border-box;
 }
-
+::-webkit-scrollbar {
+  display: none;
+}
 html {
   background-color: black;
   margin: 0;
@@ -25,6 +27,7 @@ html {
 body {
   padding: 0;
   margin: 0;
+  overflow: hidden;
 }
 main {
   overflow: hidden;
@@ -124,11 +127,11 @@ svg {
   margin: 0;
   text-align: center;
   vertical-align: middle;
-  background: rgb(149, 92, 165);
+  background: rgb(110, 61, 125);
   background: linear-gradient(
     90deg,
-    rgba(149, 92, 165, 1) 0%,
-    rgba(131, 62, 190, 1) 100%
+    rgba(110, 61, 125, 1) 0%,
+    rgba(96, 53, 114, 1) 26%
   );
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -196,11 +199,11 @@ svg {
 .note-title:hover,
 .note--active {
   border: 2px solid rgb(68, 45, 73);
-  background: rgb(149, 92, 165);
+  background: rgb(110, 61, 125);
   background: linear-gradient(
     90deg,
-    rgba(149, 92, 165, 1) 0%,
-    rgba(131, 62, 190, 1) 100%
+    rgba(110, 61, 125, 1) 0%,
+    rgba(96, 53, 114, 1) 26%
   );
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
@@ -213,7 +216,7 @@ svg {
   left: 300px;
   padding: 3rem;
   overflow-x: hidden;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
 }
 
 .note-header,
@@ -314,11 +317,11 @@ svg {
 #title-bar:hover .note-title {
   transform: translateX(0%);
   border: 2px solid rgb(68, 45, 73);
-  background: rgb(149, 92, 165);
+  background: rgb(110, 61, 125);
   background: linear-gradient(
     90deg,
-    rgba(149, 92, 165, 1) 0%,
-    rgba(131, 62, 190, 1) 100%
+    rgba(110, 61, 125, 1) 0%,
+    rgba(96, 53, 114, 1) 26%
   );
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
@@ -329,7 +332,7 @@ svg {
 .sort-options {
   position: absolute;
   white-space: nowrap;
-  background-color: rgb(63, 61, 63);
+  background-color: rgb(32, 25, 32);
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 10px;
   color: white;
@@ -348,7 +351,7 @@ svg {
   top: 12px;
   left: -12.8px;
   border-width: 7px;
-  border-color: transparent rgb(63, 61, 63) transparent transparent;
+  border-color: transparent rgba(56, 36, 62, 1) transparent transparent;
   border-style: solid;
   z-index: 5;
 }
@@ -363,12 +366,12 @@ svg {
 .sort-modified:hover,
 .sort-creation:hover {
   border-radius: 5px;
-  background-color: rgba(56, 36, 62, 1);
+  background-color: rgb(50, 21, 61);
   cursor: pointer;
 }
 .sort--active {
   border-radius: 5px;
-  background-color: rgba(56, 36, 62, 1);
+  background-color: rgb(50, 21, 61);
 }
 .overlay {
   position: absolute;
@@ -519,11 +522,12 @@ svg {
   flex-wrap: wrap;
   justify-content: center;
   position: absolute;
-  width: 100%;
+  width: 80%;
   bottom: 90px;
+  margin-left: 10%;
 }
 .font-slider {
-  width: 80%;
+  width: 100%;
   -webkit-appearance: none;
   appearance: none;
   background: transparent;
@@ -543,12 +547,14 @@ svg {
   background-color: #9146ff;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
   border-radius: 50%;
+  border: 1px solid #4a2470;
   height: 1rem;
   width: 1rem;
   transition: all 0.2s ease;
+  scale: 1.3;
 }
-.font-slider::-webkit-slider-thumb:hover {
-  scale: 1.2;
+.font-slider-container:hover .font-slider::-webkit-slider-thumb {
+  scale: 1.5;
   transition: all 0.2s ease;
 }
 .slider-caption {
